# port-glib

./: dependents.json  test-original.sh
safe/: .gitignore  Cargo.toml  meson.build  meson_options.txt  rust-toolchain.toml
safe/.cargo/: config.toml
safe/abi/: debian-control-preservation.json  debian-patches.json  installed-files.json  test-source-path-map.json  tests.json
safe/abi/install-manifests/: abi-shell.json  dev-package.json  doc-package.json  full.json  runtime.json  udeb.json
safe/abi/layout-manifests/: gio.json  girepository.json  glib.json  gmodule.json  gobject.json  gthread.json
safe/abi/layouts/: gio.json  girepository.json  glib.json  gmodule.json  gobject.json  gthread.json
safe/abi/link-compat/: abi-shell.json  (+8 more)
safe/debian/: changelog  clean  control  gbp.conf  gir1.2-glib-2.0-dev.install  gir1.2-glib-2.0.install  libgirepository-2.0-dev.install  libglib2.0-0t64.postinst  libglib2.0-0t64.preinst  libglib2.0-0t64.symbols  libglib2.0-dev.install  libglib2.0-doc.doc-base.gio-unix  libglib2.0-doc.doc-base.gmodule  libglib2.0-doc.docs  rules  shlibs.local
safe/docs/: cve-matrix.md  debian-patch-provenance.md
safe/tools/: build-abi-shell.py  build-glib-backend.py  check-postinst-state.py  check-unsafe-audit.py  common.py  compare-debian-control.py  compare-installed-files.py  compare-layouts.py  compare-symbols.py  export-rust-layouts.py  extract_abi.py  extract_layouts.py  link-compat.py  run-cve-regressions.py  run-meson-manifest.py  stage-package-tree.py  sync-upstream-assets.py  verify-debian-patches.py  verify-package-baselines.py
(+262 files in other folders)
